--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "jest": "^29.7.0",
-    "next": "14.1.1",
+    "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "14.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
